# pybmoore

./: .coveragerc  .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
benchmark/: test_pybmoore.py
pybmoore/: __init__.py  _bm.c  _bm.pxd  _bm.pyx  _boyer_moore.py
tests/: conftest.py  test_pybmoore.py
tests/data/: br_constitution.txt  us_constitution.txt
