[bdist_wheel]
universal = 1

[metadata]
name = pybmoore
version = attr: pybmoore.__version__
author = Alexandre Menezes
author_email = alexandre.fmenezes@gmail.com
description = Python/Cython Boyer-Moore string-search algorithm
long_description = file: README.md
long_description_content_type = text/markdown
license =
  Apache-2.0
license_files = LICENSE
url = https://github.com/amenezes/pybmoore
project_urls =
  Documentation = https://github.com/amenezes/pybmoore
  Code = https://github.com/amenezes/pybmoore
  Issue tracker = https://github.com/amenezes/pybmoore/issues
platforms =
  macOS
  POSIX
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Cython
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: Implementation :: CPython
  Programming Language :: Python :: Implementation :: PyPy
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Python Modules
keywords = "search", "boyer-moore", "text-search"

[options]
packages = find:
install_requires =
  aiofiles >= 0.8.0
python_requires = >= 3.6

[flake8]
exclude = venv
          __pycache__
          *.pyc
          __init__.py
ignore = E501 # line too long
         D100 # missing docstring in public module
         D101 # missing docstring in public class
         D102 # missing docstring in public method
         D103 # missing docstring in public function
         D105 # missing docstring in magic method
         D107 # missing docstring in __init__
         W503 # line break before binary operator
verbose = 2
doctests = True
show_source = True
statistics = True
count = True

[tool:pytest]
testpaths = tests
asyncio_mode = auto

[mypy]
platform=linux

files = pybmoore
show_error_context = True
verbosity = 0
ignore_missing_imports = True
no_implicit_optional = True

warn_unused_configs = True
warn_return_any = True
warn_unused_ignores = True
warn_unreachable = True

[tox:tox]
envlist = py{37,38,39,310,311},pypy{3.8,3.9}

[testenv]
deps = -rrequirements-dev.txt
whitelist_externals =
    make
    gcc
    clang
commands =
    make build
    make ci SKIP_STYLE=true
